Declare supported color schemes to fix light scrollbars in dark mode on Windows

--- a/assets/scss/styles/03-elements/_page-elements.scss
+++ b/assets/scss/styles/03-elements/_page-elements.scss
@@ -5,6 +5,10 @@
 @use "../../settings/typography" as typography-settings;
 @use "../../tools/typography";
 
+:root {
+    color-scheme: light dark;
+}
+
 html {
     height: 100%;
     font-size: typography-settings.$font-size-root; // 1.
